[FIX] hide scrollbar css style, fix modal height

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,16 +32,3 @@
 .collapse:not(.collapse-close)> :where(input[type="radio"]:checked ~ .collapse-content) {
     padding-bottom: 0.5rem;
 }
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.scrollbar-hide::-webkit-scrollbar {
-    display: none;
-}
-
-/* Hide scrollbar for IE, Edge, and Firefox */
-.scrollbar-hide {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-}
